[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mumax3c"
version = "0.2.0"
description = "Python interface to mumax3 integrated into Jupyter notebook."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

authors = [
    {name = "Marijan Beg"},
    {name = "Samuel Holt"},
    {name = "Swapneel Amit Pathak"},
    {name = "Martin Lang"},
    {name = "Jeroen Mulkers"},
    {name = "Jonathan Leliaert"},
    {name = "Vanessa Nehruji"},
    {name = "Gary Downing"},
    {name = "Ryan A. Pepper"},
    {name = "Martin Lang"},
    {name = "Thomas Kluyver"},
    {name = "Hans Fangohr"}
]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization"
]

dependencies = [
    "scipy",
    "micromagneticmodel>=0.63.2",
    "micromagnetictests>=0.63.1",
    "ubermagutil>=0.63.2",
    "ubermagtable>=0.61.3"
]

[project.optional-dependencies]
dev = [
    "build",
    "invoke",
    "nbval",
    "pre-commit",
    "pytest-cov",
    "twine"
]

[project.urls]
homepage = "https://ubermag.github.io"
documentation = "https://ubermag.github.io/documentation/mumax3c"
repository = "https://github.com/ubermag/mumax3c"



[tool.black]
experimental-string-processing = true

[tool.coverage.run]
omit = ["mumax3c/tests/*"]

[tool.isort]
profile = "black"
skip_gitignore = true  # ignores files listed in .gitignore

[tool.setuptools.packages.find]
include = ["mumax3c*"]

# to define additional information we use a custom table
# see: https://www.python.org/dev/peps/pep-0518/#tool-table
[tool.ubermag]
doi = "10.5281/zenodo.3539461"
copyright_holder = "Marijan Beg and Hans Fangohr"
contributors = [
]
about = """
- An interface to mumax<sup>3</sup> (http://mumax.github.io)

- Integration of mumax simulations into the [Jupyter](https://jupyter.org) notebook
"""
