[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "mumax3c"
version = "0.3.0"
description = "Python interface to mumax3 integrated into Jupyter notebook."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}

authors = [
    {name = "Marijan Beg"},
    {name = "Samuel Holt"},
    {name = "Swapneel Amit Pathak"},
    {name = "Martin Lang"},
    {name = "Jeroen Mulkers"},
    {name = "Jonathan Leliaert"},
    {name = "Vanessa Nehruji"},
    {name = "Gary Downing"},
    {name = "Ryan A. Pepper"},
    {name = "Martin Lang"},
    {name = "Thomas Kluyver"},
    {name = "Hans Fangohr"}
]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Education",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: MacOS",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: Unix",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Scientific/Engineering :: Physics",
    "Topic :: Scientific/Engineering :: Mathematics",
    "Topic :: Scientific/Engineering :: Visualization"
]

dependencies = [
    "scipy",
    "micromagneticmodel>=0.64.0",
    "micromagnetictests>=0.63.2",
    "ubermagutil>=0.63.4",
    "ubermagtable>=0.61.4"
]

[project.optional-dependencies]
dev = [
    "build",
    "invoke",
    "nbval",
    "pre-commit",
    "pytest-cov",
    "twine"
]

[project.urls]
homepage = "https://ubermag.github.io"
documentation = "https://ubermag.github.io/documentation/mumax3c"
repository = "https://github.com/ubermag/mumax3c"

[project.entry-points."micromagneticdata.output_collecting.Drive"]
mumax3c = "mumax3c._output_collecting_util.mumax3drive:Mumax3Drive"
[project.entry-points."micromagneticdata.output_collecting.read_table"]
mumax3c = "mumax3c._output_collecting_util.read_table:table_from_file"


[tool.coverage.run]
omit = ["mumax3c/tests/*"]

[tool.ruff.lint]
ignore-init-module-imports = true  # do not remove unused imports in __init__ and warn instead
select = [
    "B",   # flake8-bugbear
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "SIM", # flake8-simplify
    "UP",  # pyupgrade
]
ignore = [
    # conflict with other rules
    "D203",  # one-blank-line-before-class (conflicts with D204)
    "D212",  # multi-line-summary-first-line (conflicts with D213)
    # conflict with formatter
    "D206",  # indent-with-spaces
    "D300",  # triple-single-quotes
    "E111",  # indentation-with-invalid-multiple
    "E114",  # indentation-with-invalid-multiple-comment
    "E117",  # over-indented
    # conflict with Python 3.6 compatibility
    "UP022", # replace-stdout-stderr
]

[tool.ruff.lint.isort]
known-local-folder = ["mumax3c"]

[tool.ruff.lint.per-file-ignores]
"*.ipynb" = [
    "B018",  # "Found useless expression. Either assign it to a variable or remove it."; false positives when using implicit __repr__ in the notebook
    "E501",  # line too long
    "F811",  # 'redefined-while-unused'; many false positives in notebooks because ipywidgets decorated functions are not recognised
]

[tool.pytest.ini_options]
filterwarnings = [
    "error",
    "ignore:((.|\n)*)Sentinel is not a public part of the traitlets API((.|\n)*)",  # dependency of k3d
]

[tool.setuptools.packages.find]
include = ["mumax3c*"]

# to define additional information we use a custom table
# see: https://www.python.org/dev/peps/pep-0518/#tool-table
[tool.ubermag]
doi = "10.5281/zenodo.3539461"
copyright_holder = "Marijan Beg and Hans Fangohr"
contributors = [
]
about = """
- An interface to mumax<sup>3</sup> (http://mumax.github.io)

- Integration of mumax simulations into the [Jupyter](https://jupyter.org) notebook
"""
